--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,33 @@
         android:theme="@style/Theme.RateMyPritch"
         tools:targetApi="31">
         <activity
+            android:name=".StreetView"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDCG5Wx_r96NL1zuKgx_deoOOTbIi0ne6Y" />
+
+        <activity
+            android:name=".RateMyPritchMap"
+            android:exported="false"
+            android:label="@string/title_activity_rate_my_pritch_map"></activity>
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <activity
             android:name=".departmental_reviews"
             android:exported="false">
             <meta-data
@@ -60,9 +87,10 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-            
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
